--- a/style.css
+++ b/style.css
@@ -1,9 +1,37 @@
-
-body{
+body {
 
     font-family: 'Poppins', sans-serif;
 }
 
-h1{
+h1 {
     font-size: 50px;
+}
+
+.or {
+
+    color: coral;
+
+}
+
+section {
+    display: flex;
+
+}
+
+.box1 {
+    width: 50%;
+    padding-right: 5%;
+    padding-left: 5%;
+}
+
+.box1 a {
+    background-image: linear-gradient(orange, tomato);
+    text-decoration: none;
+    padding: 10px 40px;
+    border-radius: 5px;
+}
+
+.box2 img {
+    width: 80%;
+
 }
