--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
 
     font-family: 'Poppins', sans-serif;
+    /* this part bodey under caption part font type dicler */
+    margin: 0%;
+    /* by default total page margin Zero */
 }
 
 h1 {
@@ -15,6 +18,7 @@ h1 {
 
 section {
     display: flex;
+    /* 2 ta side er flexibal kora hoise*/
 
 }
 
@@ -26,12 +30,22 @@ section {
 
 .box1 a {
     background-image: linear-gradient(orange, tomato);
+    /* linear-gradient use kora hoise 2 ta color shead aner jonnio*/
     text-decoration: none;
     padding: 10px 40px;
     border-radius: 5px;
+    color: white;
+    font-weight: 700;
 }
 
 .box2 img {
     width: 80%;
+
+}
+
+.main {
+
+    background-image: url("./picture/top-banner.png");
+    background-repeat: no-repeat;
 
 }
