--- a/style.css
+++ b/style.css
@@ -82,5 +82,6 @@ section {
     background-image: url(./picture/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+    /*thik ase*/
 
 }
