--- a/style.css
+++ b/style.css
@@ -88,11 +88,12 @@ h1 {
 
 .a {
     width: 50%;
-    margin: 40px 40px;
+    margin: 40px 30px;
     padding-left: 20px;
     padding-bottom: 100px;
     padding-top: 50px;
     box-shadow: 10px 10px 30px rgb(126, 126, 99);
+    border-left: 10px solid orangered;
 
 
 }
@@ -110,6 +111,7 @@ h1 {
     padding-bottom: 100px;
     padding-top: 50px;
     box-shadow: 10px 10px 30px rgb(124, 124, 102);
+    border-left: 10px solid rgb(240, 22, 156);
 
 }
 
@@ -136,4 +138,5 @@ h1 {
 
     background-image: url(./picture/exp-bg.png);
     background-repeat: no-repeat;
+    background-position: left;
 }
